# django-dynamic-serializer

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  runtests.py
.github/workflows/: tests.yml
django_dynamic_serializer/: __init__.py  mixins.py  views.py
docs/source/: conf.py  index.rst  virtual_models.rst
docs/source/_templates/: breadcrumbs.html
tests/: models.py  serializers.py  settings.py  test_db_optimization.py  test_db_optimization_virtual_models.py  test_integration.py  test_mixins.py  test_views.py  urls.py  views.py  virtual_models.py
